--- a/templates/FreeBSD/cloud-set-guest-sshkey-freebsd.j2
+++ b/templates/FreeBSD/cloud-set-guest-sshkey-freebsd.j2
@@ -1,4 +1,4 @@
-#!/bin/sh
+#!env bash
 #
 # Init file for SSH Public Keys Download Client for FreeBSD
 #
@@ -9,36 +9,27 @@
 user=root
 
 WGET=/usr/local/bin/wget
-# Add your DHCP lease folders here
-DHCP_FOLDERS="/var/db/dhclient.leases.*"
 
 keys_received=0
 file_count=0
 
-for DHCP_FILE in $DHCP_FOLDERS
-do
-	if [ -f $DHCP_FILE ]
-	then
-		file_count=$((file_count+1))
-		SSHKEY_SERVER_IP=$(grep dhcp-server-identifier $DHCP_FILE | tail -1 | awk '{print $NF}' | tr -d '\;')
+. /usr/share/cloudstack/cloudstack-common-functions
+find_lease()
 
-		if [ -n $SSHKEY_SERVER_IP ]
-		then
-			logger -t "cloud" "Sending request to ssh key server at $SSHKEY_SERVER_IP"
+SSHKEY_SERVER_IP=$(grep dhcp-server-identifier $LEASE_FILE | uniq | tail -1 | awk '{print $NF}' | tr -d '\;')
 
-			publickey=$($WGET -t 3 -T 20 -O - http://$SSHKEY_SERVER_IP/latest/public-keys 2>/dev/null)
+if [ -n $SSHKEY_SERVER_IP ]; then
+    logger -t "cloud" "Sending request to ssh key server at $SSHKEY_SERVER_IP"
 
-			if [ $? -eq 0 ]
-			then
-				logger -t "cloud" "Got response from server at $SSHKEY_SERVER_IP"
-				keys_received=1
-				break
-			fi
-		else
-			logger -t "cloud" "Could not find ssh key server IP in $DHCP_FILE"
-		fi
-	fi
-done
+    publickey=$($WGET -t 3 -T 20 -O - http://$SSHKEY_SERVER_IP/latest/public-keys 2>/dev/null)
+
+    if [ $? -eq 0 ]; then
+        logger -t "cloud" "Got response from server at $SSHKEY_SERVER_IP"
+        keys_received=1
+    fi
+else
+    logger -t "cloud" "Could not find ssh key server IP in $LEASE_FILE"
+fi
 
 # did we find the keys anywhere?
 if [ "$keys_received" == "0" ]
