--- a/templates/FreeBSD/firstboot-freebsd.j2
+++ b/templates/FreeBSD/firstboot-freebsd.j2
@@ -37,3 +37,6 @@ logger -t "Setup" "Setting up /etc/hosts for IP address $IP"
 echo "$IP      $HOST_NAME" >> /etc/hosts
 
 cat rc.conf | sed '/^cloud_firstboot/d' > /etc/rc.conf
+cat rc.conf | sed '/^linux/d' > /etc/rc.conf
+echo "linux_enable=\"YES\"" >> /etc/rc.conf
+kldload linux
