--- a/templates/dhclient/cloud-set-guest-password.j2
+++ b/templates/dhclient/cloud-set-guest-password.j2
@@ -4,24 +4,36 @@
 #
 # chkconfig: 2345 50 02
 # description: Init file for Password Download Client
-
+#
 ### BEGIN INIT INFO
-# Provides: cloud-set-guest-password
-# Required-Start: $local_fs $network
-# Required-Stop: $local_fs $syslog
-# Should-Start: $syslog
-# Should-Stop: $network $syslog
-# Default-Start: 2 3 4 5
-# Default-Stop: 0 1 6
-# Short-Description: Init file for Password Download Client
-# Description:       Init file for Password Download Client
+# Provides:          cloud-set-guest-password
+# Required-Start:    $local_fs $network
+# Required-Stop:     $local_fs $syslog
+# Should-Start:      $syslog
+# Should-Stop:       $network $syslog
+# Default-Start:     2 3 4 5
+# Default-Stop:      0 1 6
+# Short-Description: CloudStack Password Download Client
+# Description:       CloudStack Password Download Client
 ### END INIT INFO
-
-# Source function library.
-. /etc/rc.d/init.d/functions
+{% if 'stat' in platform_function_library_rhel %}
+  {% set platform_function_library = platform_function_library_rhel %}
+  {% set function_caller = "action" %}
+{% endif %}
+{% if 'stat' in platform_function_library_debian %}
+ {% set platform_function_library = platform_function_library_debian %}
+ {% set function_caller =  "log_action_msg" %}
+{% endif %}
+{% if 'stat' in platform_function_library_suse %}
+  {% set platform_function_library = platform_function_library_suse %}
+  {% set function_caller = "echo -n" %}
+{% endif %}
 
 # Modify this line to specify the user (default is root)
 user=root
+
+# Source function library.
+. {{ platform_function_library.stat.path }}
 
 . /usr/share/cloudstack/cloudstack-common-functions
 
@@ -96,12 +108,12 @@ function cloud_set_guest_password() {
 # See how we were called.
 case "$1" in
   start)
-    action $"Starting cloud-set-guest-password: " /bin/true
+    {{ function_caller }} $"Starting cloud-set-guest-password: " /bin/true
     cloud_set_guest_password
     RETVAL=$?
     ;;
   stop)
-    action $"Shutting down cloud-set-guest-password: " /bin/true
+    {{ function_caller }} $"Shutting down cloud-set-guest-password: " /bin/true
     RETVAL=$?
     ;;
   restart)
