--- a/templates/Debian/firstboot-debian.sh.j2
+++ b/templates/Debian/firstboot-debian.sh.j2
@@ -44,7 +44,10 @@ start_daemon () {
   echo "Setting up /etc/hosts for IP address $IP" 
   logger -t "Setup" "Setting up /etc/hosts for IP address $IP"
 
-  test -f /etc/ssh/ssh_host_dsa_key || ssh-keygen -t dsa -N "" -f /etc/ssh/ssh_host_dsa_key && ssh-keygen -t rsa -N "" -f /etc/ssh/ssh_host_rsa_key && ssh-keygen -t ecdsa -N "" -f /etc/ssh/ssh_host_ecdsa_key
+  test -f /etc/ssh/ssh_host_dsa_key || ssh-keygen -t dsa -N "" -f /etc/ssh/ssh_host_dsa_key 
+  test -f /etc/ssh/ssh_host_rsa_key || ssh-keygen -t rsa -N "" -f /etc/ssh/ssh_host_rsa_key 
+  test -f /etc/ssh/ssh_host_ecdsa_key || ssh-keygen -t ecdsa -N "" -f /etc/ssh/ssh_host_ecdsa_key
+  test -f /lib/init/upstart-job || service ssh restart
 
   /usr/sbin/update-rc.d cloudstack-firstboot disable
   /usr/sbin/update-rc.d cloudstack-firstboot remove
