--- a/templates/dhclient/cloud-set-guest-sshkey.j2
+++ b/templates/dhclient/cloud-set-guest-sshkey.j2
@@ -5,26 +5,37 @@
 # chkconfig: 2345 50 02
 # description: SSH Public Keys Download Client
 #
+### BEGIN INIT INFO
+# Provides:          cloud-set-guest-sshkey
+# Required-Start:    $local_fs $network $sshd
+# Required-Stop:     $local_fs $syslog
+# Should-Start:      $syslog
+# Should-Stop:       $network $syslog
+# Default-Start:     2 3 4 5
+# Default-Stop:      0 1 6
+# Short-Description: CloudStack SSH Public Keys Download Client
+# Description:       CloudStack SSH Public Keys Download Client
+### END INIT INFO
+{% if 'stat' in platform_function_library_rhel %}
+  {% set platform_function_library = platform_function_library_rhel %}
+  {% set function_caller = "action" %}
+{% endif %}
+{% if 'stat' in platform_function_library_debian %}
+ {% set platform_function_library = platform_function_library_debian %}
+ {% set function_caller =  "log_action_msg" %}
+{% endif %}
+{% if 'stat' in platform_function_library_suse %}
+  {% set platform_function_library = platform_function_library_suse %}
+  {% set function_caller = "echo -n" %}
+{% endif %}
+
 # Modify this line to specify the user (default is root)
 user=root
 
-### BEGIN INIT INFO
-# Provides: cloud-set-guest-sshkey
-# Required-Start: $local_fs $network $sshd
-# Required-Stop: $local_fs $syslog
-# Should-Start: $syslog
-# Should-Stop: $network $syslog
-# Default-Start: 2 3 4 5
-# Default-Stop: 0 1 6
-# Short-Description: 
-# Description:       SSH Public Keys Download Client
-### END INIT INFO
-
 # Source function library.
-. /etc/rc.d/init.d/functions
+. {{ platform_function_library.stat.path }}
 
 . /usr/share/cloudstack/cloudstack-common-functions
-
 
 function cloud_set_guest_sshkey() {
     keys_received=0
@@ -76,12 +87,12 @@ function cloud_set_guest_sshkey() {
 # See how we were called.
 case "$1" in
   start)
-      action $"Starting cloud-set-guest-sshkey: " /bin/true
+      {{ function_caller }} $"Starting cloud-set-guest-sshkey: " /bin/true
       cloud_set_guest_sshkey
       RETVAL=$?
     ;;
   stop)
-      action $"Shutting down cloud-set-guest-sshkey: " /bin/true
+      {{ function_caller }} $"Shutting down cloud-set-guest-sshkey: " /bin/true
       RETVAL=$?
       ;;
   restart)
